--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,10 @@
     "module": "commonjs",
     "esModuleInterop": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "allowJs": true,
+    "checkJs": false
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["src/generated"]
 }
